# erklaertextgen

./: .gitattributes  .gitignore  Mixtral.ipynb  README.md  bibliography.bib  config.toml  flake.nix  pyproject.toml
config/: config.toml.example
docs/: architecture.md  erklarmistral.md  structure.md
erklartextgen/: cli.py  config.py  generation.py  postprocessing.py  prompting.py  server.py
erklartextgen/backend/: __init__.py  ollama.py
erklartextgen/erlartextgen/evaluation/: __init__.py
erklartextgen/evaluation/: __init__.py  pipeline.py
erklartextgen/evaluation/cefr/: bert_efcamdat.py  cefr_j.py  efllex.py  evaluation.py
erklartextgen/evaluation/linguistic/: evaluation.py  forms.py  indicators.py
erklartextgen/evaluation/readability/: __init__.py  evaluation.py  metrics.py
erklartextgen/evaluation/safety/: __init__.py  detoxify.py  evaluation.py
erklartextgen/evaluation/stylistic/: __init__.py  evaluation.py  gpt4.py
erklartextgen/evaluation/text_length/: evaluation.py
erklartextgen/util/: evaluate_eval_set.py  generate_eval_set.py  make_plots.py  preprocess_dataset.py  preprocess_kaggle.py  process_wiki.py
erlartextgen/evaluation/: __init__.py  pipeline.py
erlartextgen/evaluation/linguistic/: indicators.py
erlartextgen/evaluation/readability/: __init__.py
erlartextgen/evaluation/safety/: __init__.py
fapra-frontend/: README.md  package-lock.json  package.json
fapra-frontend/src/: OutputPage.vue  PromptPage_1.vue
frontend/: .gitignore  README_NIKLAS_UND_XHULIO.txt  app.py  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  OutputPage.vue  PromptPage.vue
frontend/src/components/: OutputPage.vue  PromptPage.vue  Teacher.vue
frontend/src/router/: index.js
frontend/src/views/: StudentView.vue  TeacherView.vue
notebooks/: cefr_classifier.ipynb  efcamdat.ipynb  exploration.ipynb  wikipedia_classify.ipynb
