[tool.poetry]
name = "erlartextgen"
version = "0.1.0"
description = ""
authors = ["Niklas Kunz <niklas.kunz@studium.fernuni-hagen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
spacy = "^3.7.4"
nltk = "^3.8.1"
wn = "^0.9.5"
detoxify = "^0.5.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
