[tool.poetry]
name = "erklartextgen"
version = "0.1.0"
description = ""
authors = ["Niklas Kunz <niklas.kunz@studium.fernuni-hagen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
spacy = "^3.7.4"
nltk = "^3.8.1"
wn = "^0.9.5"
detoxify = "^0.5.2"
flask = "^3.0.3"
ollama = "^0.2.1"
toml = "^0.10.2"
sentence-transformers = "^3.0.1"

[tool.poetry.scripts]
server = "erklartextgen.cli:run_server"
eval = "erklartextgen.cli:run_eval"
generate = "erklartextgen.cli:run_generate"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
