[tool.poetry]
name = "erklartextgen"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
spacy = "^3.7.4"
nltk = "^3.8.1"
wn = "^0.9.5"
detoxify = "^0.5.2"
flask = "^3.0.3"
ollama = "^0.2.1"
toml = "^0.10.2"
sentence-transformers = "^3.0.1"
flask-cors = "^4.0.1"
openai = "^1.35.3"
scipy = "^1.14.0"
jsonlines = "^4.0.0"
datasets = "^2.20.0"

[tool.poetry.scripts]
server = "erklartextgen.cli:run_server"
eval = "erklartextgen.cli:run_eval"
generate = "erklartextgen.cli:run_generate"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
py-readability-metrics = "^1.4.5"
joblib = "^1.4.2"
matplotlib = "^3.9.1"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
